--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body onload="FidoAudio.init()">
+<body>
 
 
     <div id="global">
@@ -69,43 +69,20 @@
 
         </div>
 
-
-        <!-- <div id="menucontainer">
-            <div id="menu">
-                <div id="btn_play"><img class="uiimage" src="./img/MainMenu/btn_play.png"></div>
-                <div id="btn_score"><img class="uiimage" src="./img/MainMenu/btn_score.png"></div>
-            </div>
-        </div>
-
-        <div id="settingcontainer">
-            <div id="setting">
-                <div id="btn_setting"><img class="uiimage" src="./img/MainMenu/btn_setting.png"></div>
-                <div id="btn_howtop"><img class="uiimage" src="./img/MainMenu/btn_htp.png"></div>
-                <div id="btn_howtop"><img class="uiimage" src="./img/MainMenu/btn_exit.png"></div>
-            </div>
-        </div> -->
     </div>
 
     <!-- scripts/library -->
     <script type="text/javascript" src="./scripts/lib/CocoonJS.js"></script>
     <script type="text/javascript" src="./scripts/lib/CocoonJS_App.js"></script>
     <script type="text/javascript" src="./scripts/lib/CocoonJS_App_ForCocoonJS.js"></script>
-    <script type="text/javascript" src="./scripts/lib/SegmentData.js"></script>
-    <script type="text/javascript" src="./scripts/lib/LocalStorage.js"></script>
-    <script type="text/javascript" src="./scripts/lib/Device.js"></script>
-    <script type="text/javascript" src="./scripts/lib/FidoAudio.js"></script>
     <script type="text/javascript" src="./scripts/lib/TimelineLite.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/TweenLite.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/EasePack.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/stats.min.js"></script>
-    <script type="text/javascript" src="./scripts/lib/pixi.js"></script>
-    <script type="text/javascript" src="./scripts/lib/GoodBoySplash.js"></script>
-    <script type="text/javascript" src="./scripts/lib/Device.js"></script>
     <script type="text/javascript" src="./scripts/lib/howler.js"></script>
-    <script type="text/javascript" src="./scripts/lib/Math2.js"></script>
 
-    <script type="text/javascript" src="./scripts/lib/StressTest.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
+    <script type="text/javascript" src="./scripts/lib/GameData.js"></script>
     <script src="./scripts/launch.js"></script>
 
 
