--- a/src/index.html
+++ b/src/index.html
@@ -13,73 +13,83 @@
     <link rel="icon" href="#" type="image/png">
     <link rel="shortcut icon" href="#" type="image/png">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" type="text/css" charset="utf-8">
-    <link rel="stylesheet" href="./css/fonts.css" type="text/css" charset="utf-8">
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-        }
-        
-        canvas {
-            pointer-events: none;
-            width: 100%;
-        }
-        
-        #overlay {
-            position: absolute;
-            z-index: 9999;
-            top: 0;
-            left: 0;
-            width: 100%;
-        }
-    </style>
-
 
 </head>
 
 <body>
 
-
     <div id="global">
-
-        <div id="menu">
-
-            <div id="groupMainMenu">
-                <div id="btn_play"><img src="./img/MainMenu/btn_play.png"></div>
-                <div id="btn_score"><img src="./img/MainMenu/btn_score.png"></div>
+        <div class="cover-containe">
+            <div class="row fixed-top" id="top_btn">
+                <div class="col">
+                    <div id="btn_story">
+                        <img class="float-left" src="./img/MainMenu/btn_story.png">
+                    </div>
+                </div>
+                <div class="col">
+                    <div hidden><img src="./img/MainMenu/btn_play.png"></div>
+                </div>
+                <div class="col">
+                    <div hidden><img src="./img/MainMenu/btn_score.png"></div>
+                </div>
+                <div class="col">
+                    <div id="btn_htp">
+                        <img class="float-right" src="./img/MainMenu/btn_htp.png">
+                    </div>
+                </div>
             </div>
 
-            <div id="leftUpCorner">
-                <div id="btn_story"><img src="./img/MainMenu/btn_story.png"></div>
+            <div class="row fixed-bottom" id="bottom_btn">
+                <div class="col">
+                    <div id="btn_setting">
+                        <img class="float-left" src="./img/MainMenu/btn_setting.png">
+                    </div>
+                </div>
+                <div class="col">
+                    <div id="btn_play"><img src="./img/MainMenu/btn_play.png"></div>
+                </div>
+                <div class="col">
+                    <div id="btn_score"><img src="./img/MainMenu/btn_score.png"></div>
+                </div>
+                <div class="col">
+                    <div id="btn_exit">
+                        <img class="float-right" src="./img/MainMenu/btn_exit.png">
+                    </div>
+                </div>
             </div>
-
-            <div id="leftDownCorner">
-                <div id="btn_story"><img src="./img/MainMenu/btn_setting.png"></div>
-            </div>
-
-            <div id="rightUpCorner">
-                <div id="btn_story"><img src="./img/MainMenu/btn_htp.png"></div>
-            </div>
-
-            <div id="rightDownCorner">
-                <div id="btn_story"><img src="./img/MainMenu/btn_exit.png"></div>
-            </div>
-
-
         </div>
-
     </div>
 
+
+    <div class="modal fade" id="modal_movie" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog  modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                        <iframe class="embed-responsive-item" src="./movie/IntroAnime.m4v" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+        $('#modal_movie').modal('show');
+    </script>
+
     <!-- scripts/library -->
-    <script type="text/javascript" src="./scripts/lib/CocoonJS.js"></script>
-    <script type="text/javascript" src="./scripts/lib/CocoonJS_App.js"></script>
-    <script type="text/javascript" src="./scripts/lib/CocoonJS_App_ForCocoonJS.js"></script>
     <script type="text/javascript" src="./scripts/lib/TimelineLite.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/TweenLite.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/EasePack.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/stats.min.js"></script>
-    <script type="text/javascript" src="./scripts/lib/howler.js"></script>
+    <script type="text/javascript" src="./scripts/lib/howler.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
     <script type="text/javascript" src="./scripts/lib/GameData.js"></script>
