--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="#" type="image/png">
     <link rel="shortcut icon" href="#" type="image/png">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" type="text/css" charset="utf-8">
 
 </head>
@@ -97,9 +97,9 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./scripts/lib/jquery-3.3.1.slim.min.js"></script>
+    <script type="text/javascript" src="./scripts/lib/popper.min.js"></script>
+    <script type="text/javascript" src="./scripts/lib/bootstrap.min.js"></script>
 
     <!-- scripts/library -->
     <script type="text/javascript" src="./scripts/lib/TimelineLite.min.js"></script>
@@ -110,7 +110,7 @@
     <script type="text/javascript" src="./scripts/lib/pixi.min.js"></script>
 
     <script type="text/javascript" src="./scripts/lib/GameData.js"></script>
-    <script src="./scripts/launch.js"></script>
+    <script src="./scripts/KulineRun.min.js"></script>
 
 
 </body>
